Regex addition, clear tab

--- a/history.html
+++ b/history.html
@@ -54,7 +54,7 @@
   <h2>Ad Mute Dashboard</h2>
 
   <input type="text" id="searchInput" placeholder="Search ad name..." />
-  <!--<button id="clearBtn">Clear</button>-->
+  <button id="clearBtn">Clear</button>
   <button id="exportBtn">Export CSV</button>
 
   <table>
